fix so bottom border of !MenuBar shows up correctly in IE7 in high-contrast mode, refs #10527
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22285 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1269,7 +1269,10 @@ img.dijitColorPaletteUnder {
 .dijit_a11y .dijitCheckedMenuItemIcon {
 	display: none;
 }
-
+.dj_ie .dijit_a11y .dijitMenuBar .dijitMenuItem {
+	/* so bottom border of MenuBar appears on IE7 in high-contrast mode */
+	margin: 0px;
+}
 
 /* StackContainer */
 
